--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  @apply bg-white text-slate-900 dark:bg-slate-950 dark:text-slate-100 antialiased font-sans;
+  @apply bg-white text-texto dark:bg-slate-900 dark:text-texto antialiased font-sans;
 }
 
 a {
